--- a/src/style/paginaLogin.css
+++ b/src/style/paginaLogin.css
@@ -7,12 +7,56 @@
     font-family: NeueMachinaRegular;
     src: local(NeueMachina), url(../assets/NeueMachina-Regular.otf);
 }
+
+@font-face {
+    font-family: NeueMachinaUltrabold;
+    src: local(NeueMachina), url(../assets/NeueMachina-Ultrabold.otf);
+}
+
+.raleway-font {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+}
+
+.semConta{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.criarConta{
+    width: 150px;
+    height: 50px;
+    background-color: transparent;
+    border-style: solid;
+    border-radius: 50px;
+    border-color: white;
+    color: white;
+}
+
+.continuar{
+    border-radius: 50px;
+    border: none;
+    background-color: #99E626;
+    height: 50px;
+    width: 200px;
+    font-family: NeueMachinaRegular;
+    color: #2444B5;
+    font-size: 20px;
+}
+
 .textoBoasVindas{
     width: 10vw;
     position: absolute;
 }
 
 .retanguloAzul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #2444b5;
     position: absolute;
     right: 0;
@@ -22,13 +66,56 @@
     border-bottom-left-radius: 16px;
 }
 
+.oAuthIcons{
+    width: 200px;
+    position: absolute;
+    top: 100px;
+}
+
+
+
+
+.retanguloAzul h1{
+    font-family: NeueMachinaUltrabold;
+    color: white;
+    position: absolute;
+    top: 40px;
+}
+
+.retanguloAzul p{
+    color: white;
+}
 .imagem{
     position: absolute;
     width: 380px;
     height: 526px;
 }
 
-p{
-    font-family: NeueMachinaRegular;
-    font-size: 21px;
+.campoLogin {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    background-color: white;
+    width: 300px;
+    height: 40px;
+    border-radius: 8px;
+    margin-bottom: 20px
+}
+
+.campoLogin input{
+    border: none;
+    font-family: Raleway;
+    font-size: 17px;
+}
+
+.campoLogin img{
+    height: 30px;
+    width: 35px;
+    background-color: white;
+}
+
+.icon2 img{
+    height: 10px;
+    width: 15px;
 }
