--- a/src/style/paginaLogin.css
+++ b/src/style/paginaLogin.css
@@ -13,22 +13,73 @@
     src: local(NeueMachina), url(../assets/NeueMachina-Ultrabold.otf);
 }
 
-.raleway-font {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
+@font-face {
+    font-family: RalewayRegular;
+    src: local(RalewayRegular), url(../assets/raleway/Raleway-Regular.ttf);
 }
 
+/* Início da estilização da parte branca */
+.retanguloBranco{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 100vh;
+    width: 50vw;
+    position: absolute;
+    
+}
+.textoBemVindo{
+    width: 500px;
+}
+.retanguloBranco p{
+    font-family: NeueMachinaRegular;
+    font-size: 15px;
+}
+
+.botaoVoltar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    right: 35%;
+    text-decoration: none;
+}
+
+.botaoVoltar img{
+    height: 17px;
+}
+
+.botaoVoltar p{
+    text-decoration: none;
+    font-family: NeueMachinaRegular;
+    color: #000000;
+}
+
+.imagem img{
+    width: 250px;
+}
+
+.logo img{
+    height: 50px;
+}
+
+/* Início da estilização da metade azul */
 .semConta{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    
 }
+
+.semConta p{
+    margin-right: 10px;
+}
+
 .criarConta{
     width: 150px;
-    height: 50px;
+    height: 30px;
     background-color: transparent;
     border-style: solid;
     border-radius: 50px;
@@ -47,15 +98,15 @@
     font-size: 20px;
 }
 
-.textoBoasVindas{
-    width: 10vw;
-    position: absolute;
+
+.oAuthIcons{
+    width: 200px;
 }
 
 .retanguloAzul{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #2444b5;
     position: absolute;
@@ -66,31 +117,27 @@
     border-bottom-left-radius: 16px;
 }
 
-.oAuthIcons{
-    width: 200px;
-    position: absolute;
-    top: 100px;
-}
-
-
-
 
 .retanguloAzul h1{
     font-family: NeueMachinaUltrabold;
     color: white;
-    position: absolute;
     top: 40px;
 }
-
+.retanguloAzul a{
+    color: white;
+    font-family: RalewayRegular;
+    font-size: 13px;
+}
 .retanguloAzul p{
     color: white;
-}
-.imagem{
-    position: absolute;
-    width: 380px;
-    height: 526px;
+    font-family: RalewayRegular;
+    font-size: 13px;
 }
 
+
+.alternatives{
+    text-align: center;
+}
 .campoLogin {
     display: flex;
     justify-content: space-around;
@@ -100,21 +147,48 @@
     width: 300px;
     height: 40px;
     border-radius: 8px;
-    margin-bottom: 20px
 }
 
 .campoLogin input{
     border: none;
     font-family: Raleway;
     font-size: 17px;
+    margin-left: -25%;
+    outline: 0;
 }
 
 .campoLogin img{
+    height: 25px;
+    width: 40px;
+    background-color: white;
+    margin-left: -10%;
+
+}
+
+.campoSenha {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    background-color: white;
+    width: 300px;
+    height: 40px;
+    border-radius: 8px;
+}
+
+.campoSenha input{
+    border: none;
+    font-family: Raleway;
+    font-size: 17px;
+    margin-left: -7%;
+    outline: 0;
+}
+
+.campoSenha img{
     height: 30px;
     width: 35px;
     background-color: white;
 }
-
 .icon2 img{
     height: 10px;
     width: 15px;
