--- a/src/styles/Voltar.css
+++ b/src/styles/Voltar.css
@@ -3,7 +3,7 @@
     src: url("/NeueMachina-Regular.otf") format("opentype");
 }
 
-.textoVoltar {
+.botaoVoltar {
     position: absolute;
     top: 25px;
     left: 50px;
@@ -11,9 +11,16 @@
     font-size: 23px;
 }
 
-.textoVoltar a {
+.textoBotaoVoltar {
+    color: black;
+    position: relative;
+    top: 2px;
+    left: 5px;
+}
+
+.botaoVoltar a {
     color: black;
     text-decoration: none;
     display: flex;
-    align-items: center;
+    align-items:center;
 }
