--- a/src/styles/BlocoCadastro.css
+++ b/src/styles/BlocoCadastro.css
@@ -24,8 +24,8 @@
     height: 550px;
     border-radius: 16px;
     position: absolute;
-    left: 100px;
-    top: 180px;
+    left: 250px;
+    top: 220px;
 }
 
 .titleBlocoCadastro 
@@ -63,7 +63,7 @@
 }
 
 .blocosInputBlocoCadastro {
-    margin-top: 15px;
+    margin-top: 25px;
 }
 
 .inputNome input
@@ -112,7 +112,8 @@
     margin-top: 0px;
     margin-left: 30px;
     position: relative;
-    top: -15px;
+    top: -10px;
+    left: 5px;
 }
 
 .textosProibidos 
@@ -121,4 +122,31 @@
     align-items: center;
     gap: 5px;
     margin-bottom: 15px;
+}
+
+.botaoContinuar button {
+    font-family: neue machina;
+    font-size: 25px; 
+    width: 212px;
+    height: 62px;
+    position: relative;
+    top: -60px;
+    left: 755px;
+    border: none;
+    border-radius: 40px;
+    color: blue;
+    background-color: #99E626;
+}
+
+.gekkoCadastro
+{
+    position: relative;
+    top: 40;
+    left: 1200px;
+    width: 400px;
+}
+
+.gekkoCadastro img
+{
+    height: 720px;
 }
