mudanças na organização dos componentes

--- a/src/styles/BlocoCadastro.css
+++ b/src/styles/BlocoCadastro.css
@@ -124,7 +124,7 @@
     margin-bottom: 15px;
 }
 
-.botaoContinuar button {
+.botaoContinuar {
     font-family: neue machina;
     font-size: 25px; 
     width: 212px;
