--- a/src/styles/texto.css
+++ b/src/styles/texto.css
@@ -35,7 +35,7 @@
 
 }
 
-.button1{
+.botaoContratar{
   height: 40px;
   width: 200px;
   margin: 45px;
@@ -47,7 +47,7 @@
   font-size: 15px;
 }
 
-.button2{
+.botaoTrabalhar{
   height: 40px;
   width: 200px;
   margin: 45px;
