--- a/src/styles/BlocoCadastro.css
+++ b/src/styles/BlocoCadastro.css
@@ -134,7 +134,23 @@
     left: 755px;
     border: none;
     border-radius: 40px;
-    color: blue;
+    color: black;
+    background-color: #99E626;
+    transition: border-radius 0.3s ease;
+}
+
+.botaoContinuar button:hover 
+{
+    font-family: neue machina;
+    font-size: 25px; 
+    width: 212px;
+    height: 62px;
+    position: relative;
+    top: -60px;
+    left: 755px;
+    border: none;
+    border-radius: 10px;
+    color: black;
     background-color: #99E626;
 }
 
