--- a/src/styles/Rodape.css
+++ b/src/styles/Rodape.css
@@ -26,6 +26,20 @@
     color: #2444B5;
     background-color: white;
     margin-left: 25px;
+    transition: border-radius 0.3s ease;
+}
+
+.loginRodape button:hover
+{
+    font-family: neue machina;
+    font-size: 25px; 
+    width: 212px;
+    height: 62px;
+    border: solid 1px #2444B5;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: #2444B5;
+    margin-left: 25px;
 }
 
 .naoFreelancerRodape 
