--- a/src/styles/Voltar.css
+++ b/src/styles/Voltar.css
@@ -18,8 +18,23 @@
     left: 5px;
 }
 
+.textoBotaoVoltar:hover {
+    color: black;
+    position: relative;
+    top: 2px;
+    left: 5px;
+    text-decoration: underline;
+}
+
 .botaoVoltar a {
     color: black;
+    text-decoration: none;
+    display: flex;
+    align-items:center;
+}
+
+.botaoVoltar a:hover {
+    color: rgb(201, 201, 201);
     text-decoration: none;
     display: flex;
     align-items:center;
