--- a/src/styles/PaginaPreCadastro.css
+++ b/src/styles/PaginaPreCadastro.css
@@ -69,9 +69,11 @@
     height: 300px;
 }
 
-.imagensTextoPreCadastro texto 
-{
+.imagensTextoPreCadastro a 
+{   
+    color: black;
     font-size: 20px;
     width: 400px;
     text-align:center;
+    text-decoration: none;
 }
