--- a/src/styles/Recuperaçãosenha4.css
+++ b/src/styles/Recuperaçãosenha4.css
@@ -35,8 +35,8 @@
 
 .textoRecSenha4{ 
     background-color: #2444B5;
-    width: 75vh;
-    height: 20vh;
+    width: 70vh;
+    height: 17vh;
     margin-top: 200px;
     border-radius: 14px;
     margin-left: 70vh;
@@ -45,7 +45,7 @@
     margin-left: 6px;
     margin-right: 10px;
     font-family: NeueMachinaRegular;
-    font-size: 32px;
+    font-size: 35px;
     color: #ffffff;
     text-align: justify;
 }
@@ -57,9 +57,12 @@
     height: 50px;
 }
 
-.imagemrec2{
-    float: right;
-    display: flex;
+.Imagemrec4{
+    width: 100%;
+  height: auto;
+  max-width: 500px; 
+  display: block; 
+  margin: 0 auto; 
 }
 
 .Bnttextrec4{
@@ -76,6 +79,17 @@
     font-family: NeueMachinaRegular;
     border-radius: 40px;
     border: none;
+    width: 250px;
+    height: 70px;
+}
+
+.Btntreenviar{
+    font-size: 25px;
+    background-color: #ffffff;
+    border: 2px solid #2444B5;
+    color: #2444B5;
+    font-family: NeueMachinaRegular;
+    border-radius: 12px;
     width: 250px;
     height: 70px;
 }
