pagina recuperar senha alterada

--- a/src/styles/PaginaRecuperarSenha.css
+++ b/src/styles/PaginaRecuperarSenha.css
@@ -40,10 +40,10 @@
     text-decoration-color: #2444B5;
 }
 
-.Img2faTelefone img{
+.ImgRecSenha img{
     position: absolute;
     bottom: 0;
-    height: 70vh;
+    height: 50vh;
 }
 
 .botaoContinuarSeta{
