--- a/src/pages/PaginaHome/Lateral/Lateral.css
+++ b/src/pages/PaginaHome/Lateral/Lateral.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "raleway";
-    src: url("../public/Raleway-Regular.ttf");
+    font-family: "ralewaymedium";
+    src: url("../public/Raleway-Medium.ttf");
 }
 
 @font-face {
@@ -9,10 +9,10 @@
 }
 
 .opcoes p {
-    font-family: "raleway";
+    font-family: "ralewaymedium";
+    color: #3D3B3A;
 }
 
 .logo h1{
     font-family: "neopixel";
-    color: aqua;
 }
