--- a/src/pages/PaginaHome/Container-trabalhos/Container.css
+++ b/src/pages/PaginaHome/Container-trabalhos/Container.css
@@ -4,7 +4,7 @@
     src: url("/NeueMachina-Regular.otf") format("opentype");
 }
 
-.principais-escolhas p{
+.container p{
     font-family: "neue machina";
     color: #3D3B3A;
 }
