--- a/src/pages/PaginaHome/Lateral/Lateral.css
+++ b/src/pages/PaginaHome/Lateral/Lateral.css
@@ -8,11 +8,39 @@
     src: url("../public/NEOPIXEL-Regular\ \(1).otf") format("opentype");
 }
 
-.opcoes p {
-    font-family: "ralewaymedium";
-    color: #3D3B3A;
+.lateral {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 18.429vw;
+    height: 100vh;
+    background-color: white;
+    border-radius: 50px;
 }
 
-.logo h1{
+.campos {
+    font-family: "ralewaymedium";
+    font-size: 2.037vh;
+    color: #3D3B3A;
+    margin-top: 3vh;
+}
+
+.campoPaginaInicial {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.campoPaginaInicial .campo {
+    background-color: #D6DFFF;
+    color: #2444B5;
+}
+
+.logoHomePage {
+    width: 15.212vw;
+    height: 5.8vh;
+    margin-top: 2vh;
+    text-align: center;
     font-family: "neopixel";
+    font-size: 5.601vh;
 }
