--- a/src/styles/Recuperaçãosenha4.css
+++ b/src/styles/Recuperaçãosenha4.css
@@ -29,7 +29,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 10vh;
     margin-top: 10vh;
 }
 
@@ -37,32 +37,22 @@
     background-color: #2444B5;
     width: 70vh;
     height: 17vh;
-    margin-top: 200px;
-    border-radius: 14px;
+    margin-top: 20vh;
+    border-radius: 14vh;
     margin-left: 70vh;
 }
 .textaviso{
-    margin-left: 6px;
-    margin-right: 10px;
     font-family: NeueMachinaRegular;
-    font-size: 35px;
+    font-size: 5vh;
     color: #ffffff;
     text-align: justify;
 }
 
 .ImgAvião{
-    margin-top: 10px;
-    margin-left: 10px;
-    width: 50px;
-    height: 50px;
-}
-
-.Imagemrec4{
-    width: 100%;
-  height: auto;
-  max-width: 500px; 
-  display: block; 
-  margin: 0 auto; 
+    width: 14vh;
+    height: 14vh;
+    margin-left: -5vh;
+    margin-top: -100vh;
 }
 
 .Bnttextrec4{
