--- a/src/styles/Recuperaçãosenha4.css
+++ b/src/styles/Recuperaçãosenha4.css
@@ -22,37 +22,49 @@
     font-family: RalewayRegular;
     src: local(RalewayRegular), url(../assets/raleway/Raleway-Regular.ttf);
 }
-
-
-.logorec{
+.logocentralizar{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 10vh;
-    margin-top: 10vh;
 }
 
+.logorec img{
+    margin-top: 10vh;
+    width: 20vw;
+    height: 15vh;
+}
+.containerrec4{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10vh;
+
+}
 .textoRecSenha4{ 
     background-color: #2444B5;
-    width: 70vh;
-    height: 17vh;
-    margin-top: 20vh;
-    border-radius: 14vh;
-    margin-left: 70vh;
+    width: 45vw;
+    height: 27vh;
+    margin-top: 2vh;
+    border-radius: 3vh;
+    order: 2;
 }
 .textaviso{
     font-family: NeueMachinaRegular;
-    font-size: 5vh;
+    font-size: 4vh;
     color: #ffffff;
     text-align: justify;
+    margin-right:10vh;
+    margin-left: 10vh;
+    margin-top: -3vh;
 }
 
-.ImgAvião{
-    width: 14vh;
-    height: 14vh;
-    margin-left: -5vh;
-    margin-top: -100vh;
+.ImgAvião {
+    width: 15vw;
+    height: 15vh;
+    margin-left: -7vw;
+    margin-top: -7vh;
 }
 
 .Bnttextrec4{
@@ -63,23 +75,61 @@
 }
 
 .Voltarlogin{
-    font-size: 25px;
+    font-size: 3vh;
     background-color: #99E626;
     color: #2444B5;
     font-family: NeueMachinaRegular;
     border-radius: 40px;
     border: none;
-    width: 250px;
-    height: 70px;
+    width: 15vw;
+    height: 8vh;
 }
+.botaovoltar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8vh;
+    flex-direction: row;
 
+}
 .Btntreenviar{
-    font-size: 25px;
+    font-size: 3vh;
     background-color: #ffffff;
     border: 2px solid #2444B5;
     color: #2444B5;
     font-family: NeueMachinaRegular;
     border-radius: 12px;
-    width: 250px;
-    height: 70px;
+    width: 15vw;
+    height: 7vh;
+    margin-left: 6vh;
+ 
+}
+.buttonreenviar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2vh;
+    flex-direction: row;
+}
+.alinharbotoes{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1vh;
+}
+.buttonrecebeu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2vh;
+    flex-direction: row;
+}
+.Imagemrec4 img{
+    width: 25vw;
+    height: 90vh;
+    float: right;
+    margin-top: -75vh;
+    margin-right: 5vw;
+    order: 1;
 }
