Visualização da pagina de recuperação de senha corrigida

--- a/src/pages/PaginaRecuperarSenha/EmailInput/EmailInput.css
+++ b/src/pages/PaginaRecuperarSenha/EmailInput/EmailInput.css
@@ -9,7 +9,7 @@
     align-items: center;
 }
 
-.blocoInputEmailRecuperarSenha p {
+.blocoInputEmailRecuperarSenha div p {
     font-family: neuemachina;
     text-align: center;
     color: #2444B5;
